Resize after adding new goal. Fixed bug when removing competence aim. Changed focused goals to contrast with the new white background. Changed color of selected competence aim checkbox.

--- a/styles/goals-page.css
+++ b/styles/goals-page.css
@@ -14,7 +14,7 @@
 .h5p-goals-page .created-goal-container {
   position: relative;
   border-bottom: 2px solid #D6D6D6;
-  background-color: #ffffff;
+  background-color: #f5f5f5;
   padding: 0.75em;
   margin-bottom: 1em;
 }
@@ -87,7 +87,7 @@
 }
 
 .h5p-goals-page .created-goal-container.focused {
-  background-color: #fff;
+  background-color: #f5f5f5;
 }
 
 /* ----------------------------------- Goal specification --------------------------- */
